ALERT-3: Created a searchable activity for a hard-coded list of mbta routes. Updated gradle to 3.0 to work with InstantRun. Added some mock screens. Added a test directory.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">AlerT</string>
     <string name="routes_page">My Routes</string>
+    <string name="routes_search_page">Search Routes</string>
 
     <string-array name="route_list">
         <item>Blue Line</item>
