--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,8 @@
 
     <string name="status">Status</string>
 
+    <string name="add_route_dialog">Add the "%1$s" to your routes?</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+
 </resources>
