--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,10 @@
     <string name="status">Status</string>
 
     <string name="add_route_dialog">Add the "%1$s" to your routes?</string>
+    <string name="remove_route_dialog">Remove the "%1$s" from your routes?</string>
+
     <string name="add">Add</string>
+    <string name="remove">Remove</string>
     <string name="cancel">Cancel</string>
 
 </resources>
