--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,7 @@
     <string name="create_alarm_page">New Alarm</string>
 
     <string name="route_list_empty">No routes to display yet</string>
-    <string-array name="route_list">
-        <item>Blue Line</item>
-        <item>Green Line</item>
-        <item>Orange Line</item>
-        <item>Red Line</item>
-        <item>Silver Line</item>
-    </string-array>
+    <string name="alarm_list_empty">No alarms saved yet</string>
 
     <string-array name="weekdays">
         <item>Monday</item>
@@ -22,12 +16,6 @@
         <item>Saturday</item>
         <item>Sunday</item>
     </string-array>
-
-    <string name="blue_line">Blue Line</string>
-    <string name="green_line">Green Line</string>
-    <string name="red_line">Red Line</string>
-    <string name="orange_line">Orange Line</string>
-    <string name="silver_line">Silver Line</string>
 
     <string name="nickname">Nickname</string>
     <string name="station">Station</string>
