ALERT-38: Added a lines section on the 'CreateAlarm' page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="nickname">Nickname</string>
     <string name="station">Station</string>
+    <string name="lines">Lines</string>
     <string name="direction">Direction</string>
     <string name="create">Create</string>
 
