--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="route_list_empty">No routes to display yet</string>
     <string name="alarm_list_empty">No alarms saved yet</string>
 
+    <string name="save_alarm_menu">Save Alarm Menu</string>
+
     <string-array name="weekdays">
         <item>Sunday</item>
         <item>Monday</item>
