ALERT-56: Created repeat type section (including custom repeat).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="nickname_dialog_title">Alarm Name (optional)</string>
     <string name="nickname_default">New Alarm</string>
 
+    <string name="repeat">Repeat</string>
+    <string name="repeat_custom_dialog_title">Select Custom Repeat</string>
+
     <string name="station">Station</string>
     <string name="directions">Directions</string>
     <string name="lines">Lines</string>
@@ -42,13 +45,6 @@
     <string-array name="duration_list">
         <item>HOURS</item>
         <item>MINUTES</item>
-    </string-array>
-
-    <string name="repeat">Repeat</string>
-    <string-array name="repeat_list">
-        <item>NEVER</item>
-        <item>WEEKLY</item>
-        <item>MONTHLY</item>
     </string-array>
 
     <string name="status">Status</string>
