ALERT-60: Added the route section and instrumented/unit tests. Renamed some dialog fragment layouts, deleted example tests, and updated git ignore to exclude json dumps from the MBTA api. Updated the MBTA module Route toString method and converted the Stop routeId field to a set.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
 
     <string name="next_firing_time">Next firing time:</string>
 
+    <string name="route">Route</string>
+    <string name="route_default">Select a route…</string>
+    <string name="route_dialog_title">Route Selection</string>
+    <string name="route_dialog_default">Type a route…</string>
+
     <string name="station">Station</string>
     <string name="directions">Directions</string>
     <string name="lines">Lines</string>
