--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,10 +48,12 @@
     <string name="direction_default">Select a direction…</string>
     <string name="direction_dialog_title">Choose Direction</string>
 
+    <string name="endpoints">Endpoints</string>
+    <string name="endpoints_dialog_title">Select Endpoints</string>
+
     <string name="station">Station</string>
     <string name="directions">Directions</string>
     <string name="lines">Lines</string>
-    <string name="endpoints">Endpoints</string>
     <string name="create">Create</string>
 
     <string name="step_1">1) Choose Start Time</string>
