--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">AlerT</string>
+    <string name="channel_name">AlerT Notifications</string>
+    <string name="channel_description">Upcoming arrival alerts for MBTA transit.</string>
+
     <string name="view_alarms_page">My Alarms</string>
     <string name="new_alarm_page">New Alarm</string>
     <string name="edit_alarm_page">Edit Alarm</string>
@@ -51,6 +54,10 @@
     <string name="remove_alarm_dialog">Remove "%1$s" from your alarms?</string>
 
     <string name="alarm_status">Alarm Status</string>
+
+    <string name="alarm_no_predictions">No trains arriving/departing soon.</string>
+    <string name="error_alarm_prediction">Error fetching MBTA arrival times for %s.</string>
+    <string name="error_no_internet">Please check your internet connection.</string>
 
     <string name="ok">OK</string>
     <string name="add">Add</string>
